tests/ui/transmutability/char.stderr
error[E0277]: `main::Char<(), !, !>` cannot be safely transmuted into `char`
  --> $DIR/char.rs:35:39
   |
LL |     is_transmutable::<Char<(), !, !>, char>();
   |                                       ^^^^ at least one value of `main::Char<(), !, !>` isn't a bit-valid value of `char`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/char.rs:8:10
   |
LL | pub fn is_transmutable<Src, Dst>()
   |        --------------- required by a bound in this function
LL | where
LL |     Dst: TransmuteFrom<Src, { Assume::SAFETY }>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `main::Char<!, (), !>` cannot be safely transmuted into `char`
  --> $DIR/char.rs:37:39
   |
LL |     is_transmutable::<Char<!, (), !>, char>();
   |                                       ^^^^ at least one value of `main::Char<!, (), !>` isn't a bit-valid value of `char`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/char.rs:8:10
   |
LL | pub fn is_transmutable<Src, Dst>()
   |        --------------- required by a bound in this function
LL | where
LL |     Dst: TransmuteFrom<Src, { Assume::SAFETY }>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `main::Char<!, !, ()>` cannot be safely transmuted into `char`
  --> $DIR/char.rs:39:39
   |
LL |     is_transmutable::<Char<!, !, ()>, char>();
   |                                       ^^^^ at least one value of `main::Char<!, !, ()>` isn't a bit-valid value of `char`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/char.rs:8:10
   |
LL | pub fn is_transmutable<Src, Dst>()
   |        --------------- required by a bound in this function
LL | where
LL |     Dst: TransmuteFrom<Src, { Assume::SAFETY }>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
